# 3D-Diffusion-Policy

./: .gitignore  ULTRADEXGRASP.md  pyproject.toml
3D-Diffusion-Policy/: eval.py  train.py
3D-Diffusion-Policy/diffusion_policy_3d/common/: replay_buffer.py
3D-Diffusion-Policy/diffusion_policy_3d/config/task/: ultradexgrasp_bimanual.yaml  ultradexgrasp_single_left.yaml  ultradexgrasp_single_right.yaml
3D-Diffusion-Policy/diffusion_policy_3d/dataset/: ultradexgrasp_dataset.py
3D-Diffusion-Policy/diffusion_policy_3d/model/common/: normalizer.py
3D-Diffusion-Policy/diffusion_policy_3d/model/vision/: pointnet_extractor.py
scripts/: import_ultradexgrasp_data.py  rollout_ultradexgrasp_policy.py  train_policy.sh  train_ultradexgrasp.sh  visualize_ultradexgrasp_checkpoint.py
