[project]
name = "dp3-workspace"
version = "0.1.0"
description = "Independent uv-managed workspace for running DP3 on UltraDexGrasp datasets."
requires-python = "==3.10.*"
dependencies = [
    "diffusion_policy_3d",
    "dill==0.3.5.1",
    "diffusers==0.11.1",
    "einops==0.4.1",
    "huggingface-hub<0.26",
    "hydra-core==1.2.0",
    "numcodecs>=0.10,<0.16",
    "numba>=0.61,<0.62",
    "numpy>=2,<3",
    "omegaconf>=2.2,<2.4",
    "termcolor>=2,<3",
    "torch==2.4.1",
    "tqdm>=4.66,<5",
    "wandb>=0.17,<0.19",
    "zarr==2.12.0",
]

[tool.uv.sources]
diffusion_policy_3d = { path = "3D-Diffusion-Policy" }
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
